syntax = "proto3";

package com.bp.common.kafka.event;

option java_package = "com.bp.common.kakfa.event";
option java_outer_classname = "ReservationEvent";

message ReservationEventProto {
  int64 start_date = 1;
  int64 end_date = 2;
  int64 reservation_id = 3;
  string requested_member_email = 4;
  ReservationType reservationType = 5;

  enum ReservationType {
    CREATE = 0;
    CANCEL = 1;
  }
}
